--- a/apropos.html
+++ b/apropos.html
@@ -25,7 +25,7 @@
       <div id="bandeau">
         <ul id="menu">
           <li><img src="image/sea_logo.png"></li>
-          <li><a href="http://www.localhost/">Accueil</a></li>
+          <li><a href="/index.php">Accueil</a></li>
           <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
           <li><a href="/scores.html">Scores</a></li>
           <li style="float:right"><a class="active" href="apropos.html">À propos</a></li>
