--- a/fin.html
+++ b/fin.html
@@ -23,7 +23,7 @@
       <div id="bandeau">
         <ul id="menu">
           <li><img src="image/sea_logo.png"></li>
-          <li><a href="http://www.localhost/">Accueil</a></li>
+          <li><a href="/index.php">Accueil</a></li>
           <li><a href="/solution.html" target="_blank" rel="noopener noreferrer">Solution</a></li>
           <li><a href="/scores.html">Scores</a></li>
           <li style="float:right"><a href="apropos.html">À propos</a></li>
@@ -35,11 +35,10 @@
 
     <div id="container">
 
-      <p> Grâce à toi Sarkozy est condamné à X mois d'emprisonnement, exellent travail !</p>
+      <p id="textfin"> Grâce à toi Sarkozy est condamné à X mois d'emprisonnement, exellent travail ! <br>Bientôt SEA 2 ! </p>
       <div id="imageFin">
         <img src="image/fin.png">
       </div>
-        <p> Bientôt SEA 2 ! </p>
     </div>
 
     <footer>
