--- a/solution.html
+++ b/solution.html
@@ -40,7 +40,7 @@
       <div class="scenario">
         <h2>Affaire Bettencourt</h2>
         <p>
-          <ol>  <i></i>
+          <ol>
             <li>Aller au siège de l’Oréal (<i>48.8681	2.3233</i>) pour voir Mme Bettencourt. Y récupérer son adresse.</li>
             <li>Aller à la maison de Françoise Bettencourt Meyers (<i>48.8779	2.2541</i>). Y rencontrer son agent de sécurité.</li>
             <li>Convaincre le vigile de vous divulguer l'adresse.</li>
@@ -53,9 +53,10 @@
         <h2>Affaire Bygmalion</h2>
         <p>
           <ol>
-            <li>Aller voir Jean François Copé à la Mairie de Meaux, récupérer les preuves et le numéro de téléphone de la ministre de la transition ecologique : Barbara Pompili.</li>
-            <li>La retrouver à l'ENSG, montrer la carte de presse au poste de sécurité pour entrer.</li>
+            <li>Aller voir Jean François Copé à la Mairie de Meaux (<i>48.9583 2.8777</i>), récupérer les preuves et le numéro de téléphone de la ministre de la transition ecologique : Barbara Pompili.</li>
+            <li>La retrouver à l'ENSG (<i>48.8412	2.5876</i>), montrer la carte de presse au poste de sécurité pour entrer.</li>
             <li>Discutez avec Barbara Pompili et récupérer les archives de factures non déclarées.</li>
+            <li>Ramener les preuves à Médiapart pour terminer votre travail et admirer l'augmentation de peine.</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail et admirer l'augmentation de peine.</li>
           </ol>
         </p>
@@ -65,12 +66,13 @@
         <h2>Affaire Reso-Garantia</h2>
         <p>
           <ol>
-            <li>Rendez-vous au siège social de siège social de la société RESO GARANTIA à Leningradskaya Street Priozersky District, Sosnovo Leningrad, 188730</li>
-            <li>Téléphoner au secrétaire de la famille, on apprend qu’ils sont à Alaverdi en Arménie dans leur maison familiale.</li>
-            <li>Aller chercher un rhinocéros dans le parc Kruger en Afrique pour Sergei.</li>
-            <li>Retrouvez-vous à Alaverdi en Arménie dans la maison familiale des Sarkisov.</li>
-            <li>Récupérer les preuves et passer demander un mandat de perquisition au commissariat général du 16ème.</li>
-            <li>Aller chercher les dernières preuves au bureau de Claude et Sarkozy avocat dans le 8ème.</li>
+            <li>Rendez-vous au siège social de siège social de la société RESO GARANTIA à Leningradskaya Street Priozersky District, Sosnovo Leningrad (<i>60.5574 30.2271</i>)</li>
+            <li>Téléphoner au secrétaire de la famille, on apprend qu’ils sont à Alaverdi en Arménie dans leur maison familiale (<i>41.1058	44.6593</i>).</li>
+            <li>Déplacer vous en voiture (<i>55.7454 37.6541</i>).</li>
+            <li>Aller chercher un rhinocéros dans le parc Kruger (<i>-23.9884	31.5540</i>) en Afrique pour Sergei.</li>
+            <li>Retrouvez-vous à Alaverdi en Arménie (<i>41.1058	44.6593</i>) dans la maison familiale des Sarkisov.</li>
+            <li>Récupérer les preuves et passer demander un mandat de perquisition au commissariat général du 16ème (<i>48.8542	2.2688</i>).</li>
+            <li>Aller chercher les dernières preuves au bureau de Claude et Sarkozy avocat dans le 8ème (<i>48.8770	2.3175</i>).</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
@@ -80,11 +82,11 @@
         <h2>Affaire Karachi</h2>
         <p>
           <ol>
-            <li>Demander les infos au service secret pakistanais situé à Islamabad, récupérez les fleurs.</li>
-            <li>Déposer les fleurs à Karachi sur le lieu de l’attentat du 8 mai 2002.</li>
-            <li>Aller au palais du roi d'Arabie Saoudite, récupérer le numéro du roi auprès d'un garde.</li>
-            <li>Le retrouver aux Maldives pour récupérer la preuve d'achat d'armements</li>
-            <li>Demander plus d'informations à Ziad Takieddine au Liban, à Baakline.</li>
+            <li>Demander les infos au service secret pakistanais situé à Islamabad (<i>33.7037	73.0795</i>), récupérez les fleurs.</li>
+            <li>Déposer les fleurs (<i></i>) à Karachi sur le lieu de l’attentat du 8 mai 2002 (<i>24.86	67.01</i>).</li>
+            <li>Aller au palais du roi d'Arabie Saoudite (<i>24.6649	46.6401</i>), récupérer le numéro du roi auprès d'un garde.</li>
+            <li>Le retrouver aux Maldives (<i>6.5421	72.9740</i>) pour récupérer la preuve d'achat d'armements</li>
+            <li>Demander plus d'informations à Ziad Takieddine au Liban, à Baakline (<i>33.6781	35.5578</i>).</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
@@ -94,11 +96,11 @@
         <h2>Affaire Kazakhgate</h2>
         <p>
           <ol>
-            <li>Aller au siège social de Tracfin à Montreuil et y récupérer un papier.</li>
-            <li>Aller au sénat belge pour récupérer la loi sur la transaction pénale votée pour réduire la peine des trois proches du président Kazakh.</li>
-            <li>Aller voir Jean-François Etienne des Rosaies dans le haras national en Corèze.</li>
-            <li>Ramener le cheval de Przewalski depuis la Mongolie, puis récupérer les infos de Jean-François.</li>
-            <li>Récupérer le dernier dossier auprès de Claude Guéant près du tribunal dans le 17ème.</li>
+            <li>Aller au siège social de Tracfin à Montreuil (<i>48.8501	2.4210</i>) et y récupérer un papier.</li>
+            <li>Aller au sénat belge (<i>50.8469	4.3647</i>) pour récupérer la loi sur la transaction pénale votée pour réduire la peine des trois proches du président Kazakh.</li>
+            <li>Aller voir Jean-François Etienne des Rosaies dans le haras national en Corèze (<i>45.3968	1.3826</i>).</li>
+            <li>Ramener le cheval de Przewalski depuis la Mongolie (<i>48.2891	113.0438</i>), puis récupérer les infos de Jean-François.</li>
+            <li>Récupérer le dernier dossier auprès de Claude Guéant près du tribunal dans le 17ème (<i>48.8934	2.3082</i>).</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
@@ -108,11 +110,11 @@
         <h2>Affaire Financement Libyen</h2>
         <p>
           <ol>
-            <li>Aller voir Kadhafi à Bab al-Azizia, le palais présidentiel Libyen. Il est mort.</li>
-            <li>Retrouver Choukri Ghanem à Vienne, près du Danube. Il est mort aussi.</li>
-            <li>Aller voir Béchir Salah à Johannesburg.Il a faillit mourrir suite à un attentat, mais se cache depuis à Dubaï.</li>
-            <li>Aller voir Alexandre Djouhri à Londres. Mince, il est hospitalisé mais nous donne néanmoins un papier.</li>
-            <li>Récupérer les dernières infos au siège social de BNP au 16 boulevard des Italiens 75009.</li>
+            <li>Aller voir Kadhafi à Bab al-Azizia, le palais présidentiel Libyen (<i>32.8722	13.1726</i>). Il est mort.</li>
+            <li>Retrouver Choukri Ghanem à Vienne, près du Danube (<i>48.2380	16.3907</i>). Il est mort aussi.</li>
+            <li>Aller voir Béchir Salah à Johannesburg (<i>-26.1997	28.0432</i>). Il a faillit mourrir suite à un attentat, mais se cache depuis à Dubaï.</li>
+            <li>Aller voir Alexandre Djouhri à Londres (<i>51.5175	-0.0586</i>). Mince, il est hospitalisé mais nous donne néanmoins un papier.</li>
+            <li>Récupérer les dernières infos au siège social de BNP au 16 boulevard des Italiens 75009 (<i>48.8717	2.3377</i>).</li>
             <li>Ramener les preuves à Médiapart pour terminer votre travail.</li>
           </ol>
         </p>
