--- a/fin.html
+++ b/fin.html
@@ -35,7 +35,7 @@
 
     <div id="container">
 
-      <p id="textfin"> Grâce à toi Sarkozy est condamné à X mois d'emprisonnement, exellent travail ! <br>Bientôt SEA 2 ! </p>
+      <p id="textfin"> Grâce à toi Sarkozy est condamné à  mois d'emprisonnement, exellent travail ! <br>Bientôt SEA 2 ! </p>
       <div id="imageFin">
         <img src="image/fin.png">
       </div>
